# japalitybean

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: compiler-roadmap.md  language-sketch-v0.2.md  language-v0.2.md  llm-authoring-guide.md  manual.md  runtime-memory-model.md  test-report-2026-05-07.md
examples/: clamp_i32.jb  find_max_even.jb  linux_main.jb  native_calls.jb  native_condition.jb  native_runtime.jb  native_string.jb  native_vector.jb  sum_positive_even.jb  type_error.jb  vector_sum_demo.jb
examples/project/: jb.toml
examples/project/src/: main.jb  math.jb
scripts/: ollama_llm_bench.py  smoke.sh
src/: ast.rs  diag.rs  ir.rs  lexer.rs  main.rs  native.rs  parser.rs  pretty.rs  typeck.rs
tests/: cli.rs
