[package]
name = "jbc"
version = "0.1.0"
edition = "2021"
description = "JapalityBean compiler MVP: LLM-first language parser, checker, formatter, and IR sketch"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "jbc"
path = "src/main.rs"
